src/test/deca/syntax/invalid/multi_lineString.deca
// Description:
//    print multi line String
//
// Resultats:
//    erreur Syntaxique
//
// Historique:
//    cree le 08/01/2023



{
	println("oooooooooooooooooo
	oooooooooooooooooooooooooo");
}
